src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
} 

@media (prefers-color-scheme: dark) { 
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
} 

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background: linear-gradient(to right, #4c44e6, #ced8fe); /* Gradient from #5148E6 to #C6D1FE */
}

body {
  color: rgb(var(--foreground-rgb));
} 

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.container {
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: flex-start; 
  padding-top: 40px;
  box-sizing: border-box; /* Ensure padding doesn't affect the width */
  background: inherit; /* Inherit background from parent elements */
}

.inner-container {
  display: flex;
  flex-direction: column;
  height: 90vh;
  width: 50%;
  margin: 0 auto;
  padding: 20px;
  box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.8);
  border-radius: 10px;
  background-color: white;
}

.inner-container h1 {
  margin-top: 0px;
  font-size: 24px;
  text-align: center;
}

.messages {
  flex: 1;
  overflow-y: auto; /* Enable vertical scrolling */
  margin-top: 10px;
  margin-bottom: 30px;
  padding: 10px;
  border: 1px solid #6762EA;
  border-radius: 10px;
}

.message {
  margin-bottom: 10px;
}

.bot-message {
  text-align: left;
  padding: 10px;
  border-radius: 5px;
  color: #000000; /* Black text color */
}

.user-message {
  text-align: left;
  margin-top: 20px;
  margin-bottom: 20px;
  color: #6762EA; /* Dark blue text color */
  font-weight: 600; 
  padding: 10px;
  border-radius: 5px;
}

form {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

form input {
  width: 90%;
  height: 50px;
  padding: 10px;
  border-radius: 10px;
  border: 1px solid #6762EA;
  color: black; /* Ensure text color is visible */
}

form button {
  width: 20%;
  height: 50px;
  margin-left: 20px;
  border-radius: 10px;
  background-color: #6762EA;
  color: white;
  border: none;
  font-size: 24px; /* Increase the font size for the arrow */
  font-weight: bold; /* Make the arrow bolder */
}

@media (max-width: 600px) {
  .inner-container {
    height: 80%;
    width: 90%;
    margin-bottom: 20px;
  }
  .inner-container h1 {
    font-weight: bold;
    color: #000000; /* Black text color */
  }
  .messages {
    height: 50vh; /* Define a fixed height for the messages container */
    margin-bottom: 10px; /* Adjust margin for better spacing */
    overflow-y: auto; /* Enable vertical scrolling */
  }
  .bot-message {
    color: #000000; /* Black text color */
  }
  .user-message {
    text-align: left;
    margin-top: 10px;
    margin-bottom: 10px;
    color: #6762EA; /* Dark blue text color */
    font-weight: 600; 
  }
  form input {
    width: 70%;
  }
  form button {
    width: 20%;
  }
}

